objects/Monthly_CPK_Report__c.object
<CustomObject>
    <fields>
        <fullName>Approved__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>No Reports</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPK_Report__c</fullName>
        <label>CPK Report</label>
        <referenceTo>CPK_Report__c</referenceTo>
        <relationshipLabel>Reports</relationshipLabel>
        <relationshipName>Monthly_CPK_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Count_Report_Uploaded__c</fullName>
        <label>Count(Report Uploaded)</label>
        <summaryFilterItems>
            <field>Report_Upload__c.Last_Report_For_the_month__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Report_Upload__c.Monthly_CPK_Report__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IsAsic__c</fullName>
        <formula>IF(AND(ISPICKVAL( CPK_Report__r.ASIC_Report__c,&quot;ASIC&quot;), ISPICKVAL( CPK_Report__r.For_All_ASIC_Customers__c,&quot;YES&quot;)),&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <label>IsAsic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>CASE(MONTH(Report_Due_Date__c) - 1,
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
0, &quot;December&quot;,
&quot;None&quot;) &amp; &quot;-&quot; &amp; TEXT(YEAR(DATE(IF((MONTH(Report_Due_Date__c) - 1) == 0, Year(Report_Due_Date__c) -1,Year(Report_Due_Date__c)) , IF((MONTH(Report_Due_Date__c) - 1) == 0, 12,MONTH(Report_Due_Date__c) - 1), DAY(Report_Due_Date__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Move_To_Provisioning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Move To Provisioning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpenTextId__c</fullName>
        <label>OpenTextId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentOpenTextId__c</fullName>
        <formula>CPK_Report__r.OpenTextId__c</formula>
        <label>ParentOpenTextId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Monthly_CPK_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_Approver_backUp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA Approver backUp</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Monthly_CPK_Reports1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_for_No_Reports__c</fullName>
        <description>Reason for No Reports.</description>
        <label>Reason for No Reports</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No WIP</fullName>
                </value>
                <value>
                    <fullName>Lots &lt; 10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Due_Date__c</fullName>
        <label>Report Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reviewed__c</fullName>
        <formula>IF(AND(!ISPICKVAL(Approved__c , &quot;Draft&quot;),  (CreatedDate  &lt;&gt;  LastModifiedDate)), IMAGE(&quot;/img/msg_icons/confirm24.png&quot;, &quot;Reviewed&quot;, 15, 15) ,  IMAGE(&quot;/img/msg_icons/error24.png&quot;, &quot;Not Reviewed&quot;, 15, 15))</formula>
        <label>Reviewed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <formula>&apos;CPK&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_to_OpenText__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if records need to be synced with OpenText System.</description>
        <label>Sync to OpenText</label>
        <type>Checkbox</type>
    </fields>
    <label>Report</label>
    <nameField>
        <label>Report</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reports</pluralLabel>
    <recordTypes>
        <fullName>CPKReportWithAttachment</fullName>
        <active>true</active>
        <label>CPKReportWithAttachment</label>
    </recordTypes>
    <recordTypes>
        <fullName>MonthlyCPKNoReports</fullName>
        <active>true</active>
        <description>For months with no CPK Reports</description>
        <label>MonthlyCPKNoReports</label>
    </recordTypes>
    <recordTypes>
        <fullName>MonthlyCPKSubmitForApproval</fullName>
        <active>true</active>
        <label>MonthlyCPKSubmitForApproval</label>
    </recordTypes>
    <recordTypes>
        <fullName>Monthly_CPK_After_Approval</fullName>
        <active>true</active>
        <label>Monthly CPK After Approval</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>